--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -324,4 +324,41 @@
     <string name="diagnostics_clear_coil_cache_cleared">Кэш изображений очищен.</string>
     <string name="diagnostics_clear_apollo_cache">Очистить кэш сетевых запросов</string>
     <string name="diagnostics_clear_apollo_cache_cleared">Сетевой кэш очищен.</string>
+    <string name="loa_expansion">Наследие предков</string>
+    <string name="general_set_the_arcology">Аркология</string>
+    <string name="ancient_ruins">Древние руины</string>
+    <string name="flooded_ruins">Затопленные руины</string>
+    <string name="deep_roots">Глубинные корни</string>
+    <string name="fungal_forest">Грибной лес</string>
+    <string name="cave_system">Пещеры</string>
+    <string name="flooded_passage">Затопленный проход</string>
+    <string name="locked_passage">Закрытый проход</string>
+    <string name="overgrown_passage">Заросший лозами проход</string>
+    <string name="the_chimney">Воздуховод</string>
+    <string name="oasis_of_sunlight">Солнечная прогалина</string>
+    <string name="scuttler_network">Лазы сколопенраков</string>
+    <string name="drenching_chamber">Сливной коллектор</string>
+    <string name="desert_of_endless_night">Вечно полночная пустыня</string>
+    <string name="orlins_vault">Хранилище Орлина</string>
+    <string name="severed_artery">Обрыв Артерии</string>
+    <string name="branching_artery">Ветви Артерии</string>
+    <string name="terminal_artery">Терминал Артерии</string>
+    <string name="silent_dormitories">Тихие спальные корпуса</string>
+    <string name="cerulean_curtain">Лазурная завеса</string>
+    <string name="mycelial_conclave">Грибное вече</string>
+    <string name="carbonforged_maze">Карбоновый лабиринт</string>
+    <string name="the_cistern">Водохранилище</string>
+    <string name="inverted_forest">Опрокинутый лес</string>
+    <string name="the_verdant_sphere">Плодоносная сфера</string>
+    <string name="the_rootway">Корневой путь</string>
+    <string name="arboretum_of_memory">Дендрарий памяти</string>
+    <string name="talpids_squeeze">Кротовый лаз</string>
+    <string name="the_cage">Клетка</string>
+    <string name="connection_restriction_data_type">Ограничение пути</string>
+    <string name="sotv_expansion">Хранители долины</string>
+    <string name="talespinner_background">Сказитель</string>
+    <string name="spirit_speaker_specialty">Медиум</string>
+    <string name="weather_enveloping_silence">Обволакивающая тишина</string>
+    <string name="weather_glitterain">Светобрызги</string>
+    <string name="weather_shimmering_runoff">Мерцающий поток</string>
 </resources>
