--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -369,6 +369,7 @@
     <string name="event_name_input">What happened?</string>
     <string name="event_header">Notable event</string>
     <string name="event_crossed_out">Crossed-out</string>
+    <string name="event_marks">Marks</string>
     <string name="removed_campaign_log_tab">Removed cards</string>
     <string name="remove_card_button">Remove card</string>
     <string name="removed_set_header">Set</string>
