--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -312,6 +312,7 @@
     <string name="event_name_input">Что произошло?</string>
     <string name="event_header">Важное событие</string>
     <string name="event_crossed_out">Зачёркнуто</string>
+    <string name="event_marks">Отметки</string>
     <string name="removed_campaign_log_tab">Удалённые карты</string>
     <string name="remove_card_button">Удалить карту</string>
     <string name="removed_set_header">Набор</string>
