--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -362,4 +362,65 @@
     <string name="weather_enveloping_silence">Обволакивающая тишина</string>
     <string name="weather_glitterain">Светобрызги</string>
     <string name="weather_shimmering_runoff">Мерцающий поток</string>
+
+    //Card Filters
+    <string name="filters_screen_header">Фильтры</string>
+    <string name="apply_button">Применить</string>
+    <string name="check_list_search_query_placeholder">Введите хотя бы 2 буквы</string>
+    <string name="types_filter_header">Типы</string>
+    <string name="traits_filter_header">Признаки</string>
+    <string name="sets_filter_header">Наборы карт</string>
+    <string name="cost_filter_header">Цена</string>
+    <string name="approaches_filter_header">Символы подхода</string>
+    <string name="packs_filter_header">Дополнения</string>
+    <string name="aspects_filter_header">Требования черт</string>
+
+    //Types
+    <string name="types_filter_attachment">Прикрепление</string>
+    <string name="types_filter_attribute">Качество</string>
+    <string name="types_filter_being">Существо</string>
+    <string name="types_filter_feature">Объект</string>
+    <string name="types_filter_gear">Снаряжение</string>
+    <string name="types_filter_moment">Момент</string>
+
+    //Traits
+    <string name="traits_filter_acquired">Приобретенное</string>
+    <string name="traits_filter_aid">Поддержка</string>
+    <string name="traits_filter_avian">Птица</string>
+    <string name="traits_filter_book">Книга</string>
+    <string name="traits_filter_clothing">Одежда</string>
+    <string name="traits_filter_companion">Спутник</string>
+    <string name="traits_filter_conduit">Проводник</string>
+    <string name="traits_filter_experience">Опыт</string>
+    <string name="traits_filter_expert">Эксперт</string>
+    <string name="traits_filter_food">Еда</string>
+    <string name="traits_filter_innate">Врожденное</string>
+    <string name="traits_filter_instrument">Музыкальный инструмент</string>
+    <string name="traits_filter_knowledge">Знание</string>
+    <string name="traits_filter_major">Старший</string>
+    <string name="traits_filter_mammal">Зверь</string>
+    <string name="traits_filter_manifestation">Явление</string>
+    <string name="traits_filter_map">Карта</string>
+    <string name="traits_filter_mod">Модуль</string>
+    <string name="traits_filter_nature">Природа</string>
+    <string name="traits_filter_skill">Навык</string>
+    <string name="traits_filter_spirit">Дух</string>
+    <string name="traits_filter_spiritual">Духовное</string>
+    <string name="traits_filter_tale">Сказ</string>
+    <string name="traits_filter_tech">Техника</string>
+    <string name="traits_filter_tool">Инструмент</string>
+    <string name="traits_filter_trail">Тропа</string>
+    <string name="traits_filter_weapon">Оружие</string>
+    <string name="traits_filter_wisdom">Мудрость</string>
+
+    //Cost
+    <string name="cost_filter_start_value">Минимальная цена</string>
+    <string name="cost_filter_end_value">Максимальная цена</string>
+    <string name="cost_filter_include_x_cost">Включать цену X</string>
+
+    //Approaches
+    <string name="approaches_filter_conflict">Конфликт</string>
+    <string name="approaches_filter_connection">Контакт</string>
+    <string name="approaches_filter_exploration">Разведка</string>
+    <string name="approaches_filter_reason">Интеллект</string>
 </resources>
