--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -424,4 +424,11 @@
     <string name="approaches_filter_connection">Контакт</string>
     <string name="approaches_filter_exploration">Разведка</string>
     <string name="approaches_filter_reason">Интеллект</string>
+
+    //Challenge deck
+    <string name="challenge_deck_title">Колода вызова</string>
+    <string name="draw_challenge_card_button">Взять карту вызова</string>
+    <string name="scout_challenge_card_button">Разведать карту вызова</string>
+    <string name="draw_challenge_card_placeholder">Возьмите или разведайте карту…</string>
+    <string name="return_scouted_cards_button">Вернуть разведанные карты</string>
 </resources>
