--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -491,4 +491,11 @@
     <string name="approaches_filter_exploration">Exploration</string>
     <string name="approaches_filter_reason">Reason</string>
 
+    //Challenge deck
+    <string name="challenge_deck_title">Challenge deck</string>
+    <string name="draw_challenge_card_button">Draw challenge card</string>
+    <string name="scout_challenge_card_button">Scout challenge card</string>
+    <string name="draw_challenge_card_placeholder">Draw or scout card…</string>
+    <string name="return_scouted_cards_button">Return scouted cards</string>
+
 </resources>
