Add german translations for challenge deck

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -420,4 +420,13 @@
     <string name="approaches_filter_connection">Verständnis</string>
     <string name="approaches_filter_exploration">Tatendrang</string>
     <string name="approaches_filter_reason">Vernunft</string>
+
+    //Challenge deck
+    <string name="challenge_deck_title">Welteffektkartenstapel</string>
+    <string name="draw_challenge_card_button">Welteffektkarte ziehen</string>
+    <string name="scout_challenge_card_button">Welteffektkarte kundschaften</string>
+    <string name="draw_challenge_card_placeholder">Karte ziehen oder kundschaften…</string>
+    <string name="return_scouted_cards_button">Gekundschaftete Karten zurücklegen</string>
+    <string name="show_charts">Diagramme anzeigen</string>
+    <string name="hide_charts">Diagramme verstecken</string>
 </resources>
